--- a/styles.css
+++ b/styles.css
@@ -140,9 +140,9 @@ label {
   border: 2px solid grey;
   /*grid-area: middle;*/
   width: 60%;
-
 }
-/*.show-more-wrapper {
+/*
+.show-more-wrapper {
   background-color: #F9F9FA; 
 }
 
@@ -191,9 +191,9 @@ label {
   outline: none;
   overflow: scroll;
   padding: 1px;
-}
+}*/
 
-section {
+.button-corral {
   border-top: solid 2px #d4d2d8;
   display: flex;
   height: 4vh;
@@ -206,13 +206,13 @@ section {
   display: flex;
 }
 
-.icon-size {
+img {
   height: 18px;
   margin-right: 10px;
   width: 18px;
 }
 
-.downvote-icon {
+/*.downvote-icon {
   margin-left: 10px;
 }
 
@@ -232,8 +232,8 @@ section {
   align-items: center;
   cursor: pointer;
   display: flex;
-}*/
-
+}
+*/
 @media screen and (max-width: 700px) {
   .filter-buttons-section {
     flex-direction: column;
